Seperate `Application` interface

--- a/Game/CMakeLists.txt
+++ b/Game/CMakeLists.txt
@@ -6,7 +6,11 @@ set(GAME_COMPONENTS
     
 )
 
-add_executable(Game main.cc)
+file(GLOB_RECURSE SOURCES
+    ./*.cc
+)
+
+add_executable(Game ${SOURCES})
     target_link_libraries(Game PUBLIC ${GAME_VENDOR} ${GAME_COMPONENTS})
     target_include_directories(Game PUBLIC .)
     set_target_properties(Game PROPERTIES OUTPUT_NAME "Game-${CMAKE_BUILD_TYPE}")
