--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -17,5 +17,6 @@ cmake_parse_arguments(
         set_target_properties(${name} PROPERTIES OUTPUT_NAME "${name}-${CMAKE_BUILD_TYPE}")
 endfunction()
 
+add_example(BareBones PATH BareBones/*.cc)
 add_example(Imgui PATH Imgui/*.cc)
 add_example(GI PATH GI/*.cc)
