--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,11 +12,16 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+# add_definitions(-DTRACY_ENABLE)
+
 add_definitions(-DNOMINMAX)
 add_definitions(-D_CRT_SECURE_NO_WARNINGS)
+
+# ASAN SETTINGS
+# add_definitions(-D_DISABLE_STRING_ANNOTATION)
+# add_definitions(-D_DISABLE_VECTOR_ANNOTATION)
 # add_compile_options(-fsanitize=address)
 # add_link_options(-fsanitize=address)
-# add_definitions(-DTRACY_ENABLE)
 
 add_subdirectory(Vendor)
 add_subdirectory(Lorr)
