--- a/.gitmodules
+++ b/.gitmodules
@@ -36,4 +36,4 @@
 	url = https://github.com/electronicarts/EAStdC.git
 [submodule "Vendor/EA/EAThread"]
 	path = Vendor/EA/EAThread
-	url = https://github.com/electronicarts/EAThread.git
+	url = https://github.com/exdal/EAThread.git
