Cleaning up old code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,12 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 add_definitions(-DNOMINMAX)
 add_definitions(-D_CRT_SECURE_NO_WARNINGS)
 
+if(MSVC)
+    add_compile_options(/arch:AVX-512)
+else()
+    add_compile_options(-march=native)
+endif()
+
 # ASAN SETTINGS
 # add_definitions(-D_DISABLE_STRING_ANNOTATION)
 # add_definitions(-D_DISABLE_VECTOR_ANNOTATION)
