--- a/Lorr/Engine/CMakeLists.txt
+++ b/Lorr/Engine/CMakeLists.txt
@@ -8,7 +8,6 @@ set(LORR_VENDOR
     EAThread
     TracyClient
     fmt
-    spdlog
     Vulkan-Headers
     imgui
     simdjson::simdjson
@@ -24,7 +23,10 @@ file(GLOB_RECURSE LORR_SOURCE
     *.cc
 )
 
-add_library(Lorr STATIC ${LORR_SOURCE})
+add_library(Lorr STATIC ${LORR_SOURCE}
+        Core/Logger/fmtlog.hh
+        Core/Logger/fmtlog-inl.hh
+        Core/Logger/fmtlog.cc)
 target_include_directories(Lorr PUBLIC ./ ../../)
 target_link_libraries(Lorr PUBLIC ${LORR_VENDOR})
 target_precompile_headers(Lorr PUBLIC pch.hh)
