--- a/Lorr/Engine/CMakeLists.txt
+++ b/Lorr/Engine/CMakeLists.txt
@@ -23,7 +23,8 @@ file(GLOB_RECURSE LORR_SOURCE
     *.cc
 )
 
-add_library(Lorr STATIC ${LORR_SOURCE})
+add_library(Lorr STATIC ${LORR_SOURCE}
+        Memory/Allocator/LinearAllocator.hh)
 target_include_directories(Lorr PUBLIC ./ ../../)
 target_link_libraries(Lorr PUBLIC ${LORR_VENDOR})
 target_precompile_headers(Lorr PUBLIC pch.hh)
