--- a/Lorr/Resources/config.cfg
+++ b/Lorr/Resources/config.cfg
@@ -9,6 +9,7 @@ RM_MAX_MEMORY 1024
 # Resource Meta File - Raw files
 RESOURCE_META_DIR "../../Lorr/Resources"
 RESOURCE_META_FILE "resmeta.json"
+SHADER_WORKING_DIR "../../Lorr/Resources/shaders"
 
 # Graphics - API
 API_SWAPCHAIN_FRAMES 3
