--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -23,7 +23,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - uses: ashutoshvarma/setup-ninja@v1.1
+      - name: Setup Ninja
+        uses: turtlesec-no/get-ninja@1.1.0
 
       - name: Set reusable strings
         # Turn repeated input strings (such as the build output directory) into step outputs. These step outputs can be used throughout the workflow file.
