CI - MSVC improvements

--- a/Lorr/Engine/CMakeLists.txt
+++ b/Lorr/Engine/CMakeLists.txt
@@ -27,4 +27,6 @@ add_library(Lorr STATIC ${LORR_SOURCE})
 target_include_directories(Lorr PUBLIC ./ ../../)
 target_link_libraries(Lorr PUBLIC ${LORR_VENDOR})
 target_precompile_headers(Lorr PUBLIC pch.hh)
-target_compile_options(Lorr PUBLIC -Wno-c++20-extensions -Wno-c99-designator)
+if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+    target_compile_options(Lorr PUBLIC -Wno-c++20-extensions -Wno-c99-designator -march=native)
+endif ()
