--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "Vendor/imgui-v"]
 	path = Vendor/imgui-v
 	url = https://github.com/exdal/imgui-v.git
+[submodule "Vendor/vk-bootstrap"]
+	path = Vendor/vk-bootstrap
+	url = https://github.com/charles-lunarg/vk-bootstrap.git
