--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -10,22 +10,21 @@ env:
 
 jobs:
   windows-clang:
-    name: (clang) Windows
+    name: (clang-cl) Windows
     runs-on: windows-latest
     strategy:
       fail-fast: false
       matrix:
-        build_type: [ Release, Debug ]
-        c_compiler: [ clang ]
-        cpp_compiler: [ clang++ ]
+        mode: [ release, debug ]
+        toolchain: [ clang-cl ]
 
     steps:
       - uses: actions/checkout@v3
         with:
           submodules: 'true'
 
-      - name: Setup Ninja
-        uses: turtlesec-no/get-ninja@1.1.0
+      - name: Setup xmake
+        uses: xmake-io/github-action-setup-xmake@v1
 
       - name: Install Vulkan SDK
         uses: humbletim/install-vulkan-sdk@v1.1.1
@@ -40,15 +39,26 @@ jobs:
         run: |
           echo "build-output-dir=${{ github.workspace }}/build" >> "$GITHUB_OUTPUT"
 
-      - name: Configure CMake
-        run: >
-          cmake -B ${{ steps.strings.outputs.build-output-dir }}
-          -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }}
-          -DCMAKE_C_COMPILER=${{ matrix.c_compiler }}
-          -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
-          -DCMAKE_MAKE_PROGRAM=ninja
-          -G Ninja
-          -S ${{ github.workspace }}
+      # Force xmake to a specific folder (for cache)
+      - name: Set xmake package cache path
+        run: echo "XMAKE_PKG_CACHEDIR=$(pwd)/xmake-cache" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+
+              # Cache xmake dependencies
+      - name: Retrieve xmake cache for packages
+        uses: actions/cache@v2
+        with:
+          path: xmake-cache
+          key: ${{ matrix.os }}-${{ matrix.arch }}
+
+      - name: Set release arch name
+        run: |
+          if ("${{ matrix.arch }}" -eq "x64") {
+            Write-Output "RELEASE_NAME=win64" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf-8 -Append
+          } else {
+            Write-Output "RELEASE_NAME=win32" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf-8 -Append
+          }
 
       - name: Build
-        run: cmake --build ${{ steps.strings.outputs.build-output-dir }} --config ${{ matrix.build_type }} --target all
+        run: |
+          xmake f -vD --toolchain=${{ matrix.toolchain }} --mode=${{ matrix.mode }} -a ${{ matrix.arch }}
+          xmake -vD
