--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -11,7 +11,7 @@ env:
 jobs:
   windows-clang-cl:
     name: (clang-cl) Windows
-    runs-on: [ self-hosted, windows, x64 ]
+    runs-on: [ windows, x64 ]
     strategy:
       fail-fast: false
       matrix:
@@ -54,14 +54,6 @@ jobs:
         with:
           path: xmake-cache
           key: ${{ matrix.os }}-${{ matrix.arch }}
-
-      - name: Set release arch name
-        run: |
-          if ("${{ matrix.arch }}" -eq "x64") {
-            Write-Output "RELEASE_NAME=win64" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf-8 -Append
-          } else {
-            Write-Output "RELEASE_NAME=win32" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf-8 -Append
-          }
 
       - name: Build
         run: |
