--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
       fail-fast: false
       matrix:
         platform:
-          - { runner: windows-latest, os: windows, arch: x64, runtime: MT, toolchain: clang-cl }
+          - { runner: windows-latest, os: windows, arch: x64, runtime: MT, toolchain: clang-cl, archive_ext: .zip }
         mode: [ debug, release ]
 
     runs-on: ${{ matrix.platform.runner }}
@@ -27,7 +27,7 @@ jobs:
         shell: bash
 
       - name: "Set OUTPUT_FILE variable"
-        run: echo "OUTPUT_FILE=${{ matrix.platform.os }}_${{ matrix.platform.arch }}_${{ matrix.mode }}_${{ matrix.libkind }}_${{ matrix.platform.vs_runtime }}${{ matrix.platform.archive_ext }}" >> $GITHUB_ENV
+        run: echo "OUTPUT_FILE=${{ matrix.platform.os }}_${{ matrix.platform.arch }}_${{ matrix.mode }}_${{ matrix.platform.runtime }}${{ matrix.platform.archive_ext }}" >> $GITHUB_ENV
         shell: bash
 
       # Force xmake to a specific folder (for cache)
@@ -67,15 +67,15 @@ jobs:
         uses: actions/cache/restore@v4
         with:
           path: ${{ env.XMAKE_GLOBALDIR }}/.xmake/packages
-          key: ${{ matrix.platform.os }}-${{ matrix.platform.arch }}-${{ matrix.mode }}-${{ matrix.libkind }}-${{ matrix.platform.vs_runtime }}-${{ steps.dep_hash.outputs.hash }}-W${{ steps.cache_key.outputs.key }}
+          key: ${{ matrix.platform.os }}-${{ matrix.platform.arch }}-${{ matrix.mode }}-${{ matrix.platform.runtime }}-${{ steps.dep_hash.outputs.hash }}-W${{ steps.cache_key.outputs.key }}
 
       - name: Configure xmake and install dependencies (Unix)
         if: ${{ matrix.platform.os != 'windows' }}
-        run: xmake config -vD --arch=${{ matrix.platform.arch }} --toolchain=${{ matrix.toolchain }}  --mode=${{ matrix.mode }} --kind=${{ matrix.libkind }} --yes --policies=package.precompiled:n
+        run: xmake config -vD --arch=${{ matrix.platform.arch }} --toolchain=${{ matrix.platform.toolchain }}  --mode=${{ matrix.mode }} --yes --policies=package.precompiled:n
 
       - name: Configure xmake and install dependencies (Windows)
         if: ${{ matrix.platform.os == 'windows' }}
-        run: xmake config -vD --arch=${{ matrix.platform.arch }} --toolchain=${{ matrix.toolchain }} --mode=${{ matrix.mode }} --kind=${{ matrix.libkind }} --vs_runtime=${{ matrix.platform.vs_runtime }} --yes --policies=package.precompiled:n
+        run: xmake config -vD --arch=${{ matrix.platform.arch }} --toolchain=${{ matrix.platform.toolchain }} --mode=${{ matrix.mode }} --vs_runtime=${{ matrix.platform.runtime }} --yes --policies=package.precompiled:n
 
       # Save dependencies
       - name: Save cached xmake dependencies
