--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,8 @@ jobs:
       fail-fast: false
       matrix:
         platform:
-          - { runner: windows-latest, os: windows, arch: x64, runtime: MT, toolchain: clang-cl, archive_ext: .zip }
+          - { runner: windows-latest, os: windows, arch: x64, runtime: MT,          toolchain: clang-cl, archive_ext: .zip }
+          - { runner: ubuntu-lates,   os: linux,   arch: x64, runtime: c++_static,  toolchain: clang,    archive_ext: .tar.gz }
         mode: [ debug, release ]
 
     runs-on: ${{ matrix.platform.runner }}
@@ -75,7 +76,7 @@ jobs:
 
       - name: Configure xmake and install dependencies (Windows)
         if: ${{ matrix.platform.os == 'windows' }}
-        run: xmake config -vD --arch=${{ matrix.platform.arch }} --toolchain=${{ matrix.platform.toolchain }} --mode=${{ matrix.mode }} --vs_runtime=${{ matrix.platform.runtime }} --yes --policies=package.precompiled:n
+        run: xmake config --arch=${{ matrix.platform.arch }} --toolchain=${{ matrix.platform.toolchain }} --mode=${{ matrix.mode }} --vs_runtime=${{ matrix.platform.runtime }} --yes --policies=package.precompiled:n
 
       # Save dependencies
       - name: Save cached xmake dependencies
