--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,8 +16,8 @@ jobs:
       fail-fast: false
       matrix:
         platform:
-          - { runner: windows-latest, os: windows, arch: x64, runtime: MT,          toolchain: clang-cl, archive_ext: .zip }
-          - { runner: ubuntu-latest,  os: linux,   arch: x64, runtime: c++_static,  toolchain: clang,    archive_ext: .tar.gz }
+          - { runner: windows-latest, os: windows, arch: x64,    runtime: MT,          toolchain: clang-cl, archive_ext: .zip }
+          - { runner: ubuntu-latest,  os: linux,   arch: x86_64, runtime: c++_static,  toolchain: clang,    archive_ext: .tar.gz }
         mode: [ debug, release ]
 
     runs-on: ${{ matrix.platform.runner }}
