--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,6 +41,9 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Setup Ninja
+        uses: turtlesec-no/get-ninja@1.1.0
+
       # Install xmake
       - name: Setup xmake
         uses: xmake-io/github-action-setup-xmake@v1.2.2
