--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,8 +16,8 @@ jobs:
       fail-fast: false
       matrix:
         platform:
-          - { runner: windows-latest, os: windows, arch: x64,    runtime: MT,          archive_ext: .zip }
-          - { runner: ubuntu-latest,  os: linux,   arch: x86_64, runtime: c++_static,  archive_ext: .tar.gz }
+          - { runner: windows-latest, os: windows, arch: x64,    runtime: MT }
+          - { runner: ubuntu-latest,  os: linux,   arch: x86_64, runtime: c++_static }
         mode: [ debug, release ]
 
     runs-on: ${{ matrix.platform.runner }}
@@ -83,7 +83,7 @@ jobs:
 
       - name: Configure xmake and install dependencies (Windows)
         if: ${{ matrix.platform.os == 'windows' }}
-        run: xmake config -vD --arch=${{ matrix.platform.arch }} --mode=${{ matrix.mode }} --vs_runtime=${{ matrix.platform.runtime }} --yes --policies=package.precompiled:n
+        run: xmake config -vD --arch=${{ matrix.platform.arch }} --mode=${{ matrix.mode }} --runtimes=${{ matrix.platform.runtime }} --yes --policies=package.precompiled:n
 
       # Save dependencies
       - name: Save cached xmake dependencies
@@ -101,19 +101,10 @@ jobs:
 
       - name: Install
         run: xmake install -vDo dest/ --group=EXES
-
-      - name: Archive result
-        uses: ihiroky/archive-action@v1
+      
+      - name: Archive production artifacts
+        uses: actions/upload-artifact@v4
         with:
-          root_dir: dest
-          file_path: ${{ env.OUTPUT_FILE }}
-          verbose: true
-
-      - name: Compute checksum of archive
-        run: |
-          if [ "$RUNNER_OS" == "Windows" ]; then
-            sha256sum -b "$OUTPUT_FILE" > "$OUTPUT_FILE.sha256"
-          else
-            shasum -a 256 -b "$OUTPUT_FILE" > "$OUTPUT_FILE.sha256"
-          fi
-        shell: bash
+          name: ${{ matrix.platform.os }}-${{ matrix.platform.arch }}-${{ matrix.mode }}-${{ matrix.platform.runtime }}
+          path: |
+            build
