--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
       matrix:
         platform:
           - { runner: windows-latest, os: windows, arch: x64,    runtime: MT }
-          - { runner: ubuntu-latest,  os: linux,   arch: x86_64, runtime: c++_static }
+          - { runner: ubuntu-22.04,  os: linux,   arch: x86_64, runtime: c++_static }
         mode: [ debug, release ]
 
     runs-on: ${{ matrix.platform.runner }}
@@ -44,9 +44,11 @@ jobs:
       - name: Install LLVM (Unix)
         if: ${{ matrix.platform.os != 'windows' }}
         run: |
-          wget https://apt.llvm.org/llvm.sh
-          chmod +x ./llvm.sh
-          sudo ./llvm.sh 18
+          wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
+          sudo add-apt-repository -y "deb http://apt.llvm.org/jammy/ llvm-toolchain-jammy-18 main"
+          sudo add-apt-repository -y "deb-src http://apt.llvm.org/jammy/ llvm-toolchain-jammy-18 main"
+          sudo apt-get update -y
+          sudo apt-get install -y clang-18 lld-18 llvm-18 libllvm18 llvm-18-runtime libclang-common-18-dev libclang-18-dev libclang1-18 libclang-rt-18-dev libc++-18-dev libc++abi-18-dev libunwind-18-dev libllvmlibc-18-dev
 
       # Install xmake
       - name: Setup xmake
@@ -79,11 +81,11 @@ jobs:
 
       - name: Configure xmake and install dependencies (Unix)
         if: ${{ matrix.platform.os != 'windows' }}
-        run: xmake config -vD --cxx=clang++-18 --cc=clang-18 --arch=${{ matrix.platform.arch }} --toolchain=clang  --mode=${{ matrix.mode }} --yes --policies=package.precompiled:n
+        run: xmake config -vD --toolchain=clang-18 --arch=${{ matrix.platform.arch }} --mode=${{ matrix.mode }} --runtimes=${{ matrix.platform.runtime }} --yes --policies=package.precompiled:n
 
       - name: Configure xmake and install dependencies (Windows)
         if: ${{ matrix.platform.os == 'windows' }}
-        run: xmake config -vD --arch=${{ matrix.platform.arch }} --mode=${{ matrix.mode }} --runtimes=${{ matrix.platform.runtime }} --yes --policies=package.precompiled:n
+        run: xmake config -vD --toolchain=msvc --arch=${{ matrix.platform.arch }} --mode=${{ matrix.mode }} --runtimes=${{ matrix.platform.runtime }} --yes --policies=package.precompiled:n
 
       # Save dependencies
       - name: Save cached xmake dependencies
