--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,12 +54,8 @@ jobs:
       - name: Setup xmake
         uses: xmake-io/github-action-setup-xmake@v1
         with:
-          xmake-version: latest
+          xmake-version: branch@dev
           actions-cache-folder: .xmake-cache-W${{ steps.cache_key.outputs.key }}
-
-      # Add my package repository
-      - name: Add third party package repo
-        run: xrepo add-repo exdal-repo https://github.com/exdal/xmake-repo slang
 
       # Update xmake repository (in order to have the file that will be cached)
       - name: Update xmake repository
