--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,8 +16,9 @@ jobs:
       fail-fast: false
       matrix:
         platform:
-          - { runner: windows-latest, os: windows, arch: x64,    runtime: MT }
-          - { runner: ubuntu-22.04,  os: linux,   arch: x86_64, runtime: c++_static }
+          - { runner: windows-latest, os: windows, arch: x64,    toolchain: msvc,     runtime: MT }
+          - { runner: windows-latest, os: windows, arch: x64,    toolchain: clang-cl, runtime: c++_static }
+          - { runner: ubuntu-22.04,   os: linux,   arch: x86_64, toolchain: clang-18, runtime: c++_static }
         mode: [ debug, release ]
 
     runs-on: ${{ matrix.platform.runner }}
@@ -28,7 +29,7 @@ jobs:
         shell: bash
 
       - name: "Set OUTPUT_FILE variable"
-        run: echo "OUTPUT_FILE=${{ matrix.platform.os }}_${{ matrix.platform.arch }}_${{ matrix.mode }}_${{ matrix.platform.runtime }}${{ matrix.platform.archive_ext }}" >> $GITHUB_ENV
+        run: echo "OUTPUT_FILE=${{ matrix.platform.os }}_${{ matrix.platform.arch }}_${{ matrix.mode }}_${{ matrix.platform.toolchain }}_${{ matrix.platform.runtime }}${{ matrix.platform.archive_ext }}" >> $GITHUB_ENV
         shell: bash
 
       # Force xmake to a specific folder (for cache)
@@ -42,7 +43,7 @@ jobs:
           fetch-depth: 0
 
       - name: Install LLVM (Unix)
-        if: ${{ matrix.platform.os != 'windows' }}
+        if: ${{ matrix.platform.os == 'linux' }}
         run: |
           wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
           sudo add-apt-repository -y "deb http://apt.llvm.org/jammy/ llvm-toolchain-jammy-18 main"
@@ -73,15 +74,10 @@ jobs:
         uses: actions/cache/restore@v4
         with:
           path: ${{ env.XMAKE_GLOBALDIR }}/.xmake/packages
-          key: ${{ matrix.platform.os }}-${{ matrix.platform.arch }}-${{ matrix.mode }}-${{ matrix.platform.runtime }}-${{ steps.dep_hash.outputs.hash }}-W${{ steps.cache_key.outputs.key }}
+          key: ${{ matrix.platform.os }}-${{ matrix.platform.arch }}-${{ matrix.mode }}-${{ matrix.platform.runtime }}-${{ matrix.platform.toolchain }}-${{ steps.dep_hash.outputs.hash }}-W${{ steps.cache_key.outputs.key }}
 
-      - name: Configure xmake and install dependencies (Unix)
-        if: ${{ matrix.platform.os != 'windows' }}
-        run: xmake config -vD --build_examples=true --toolchain=clang-18 --arch=${{ matrix.platform.arch }} --mode=${{ matrix.mode }} --runtimes=${{ matrix.platform.runtime }} --yes --policies=package.precompiled:n
-
-      - name: Configure xmake and install dependencies (Windows)
-        if: ${{ matrix.platform.os == 'windows' }}
-        run: xmake config -vD --build_examples=true --toolchain=msvc --arch=${{ matrix.platform.arch }} --mode=${{ matrix.mode }} --runtimes=${{ matrix.platform.runtime }} --yes --policies=package.precompiled:n
+      - name: Configure xmake and install dependencies
+        run: xmake config -vD --build_examples=true --toolchain=${{ matrix.platform.toolchain }} --arch=${{ matrix.platform.arch }} --mode=${{ matrix.mode }} --runtimes=${{ matrix.platform.runtime }} --yes --policies=package.precompiled:n
 
       # Save dependencies
       - name: Save cached xmake dependencies
@@ -103,6 +99,6 @@ jobs:
       - name: Archive production artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ matrix.platform.os }}-${{ matrix.platform.arch }}-${{ matrix.mode }}-${{ matrix.platform.runtime }}
+          name: ${{ matrix.platform.os }}-${{ matrix.platform.arch }}-${{ matrix.mode }}-${{ matrix.platform.toolchain }}-${{ matrix.platform.runtime }}
           path: |
             dest
