--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,7 @@ on:
 
 env:
   VULKAN_VERSION: 1.3.261.1
+  LLVM_VERSION: 18
 
 jobs:
   build:
@@ -49,7 +50,7 @@ jobs:
           sudo add-apt-repository -y "deb http://apt.llvm.org/jammy/ llvm-toolchain-jammy-18 main"
           sudo add-apt-repository -y "deb-src http://apt.llvm.org/jammy/ llvm-toolchain-jammy-18 main"
           sudo apt-get update -y
-          sudo apt-get install -y clang-18 lld-18 llvm-18 libllvm18 llvm-18-runtime libclang-common-18-dev libclang-18-dev libclang1-18 libclang-rt-18-dev libc++-18-dev libc++abi-18-dev libunwind-18-dev libllvmlibc-18-dev
+          sudo apt-get install -y clang-${{ env.LLVM_VERSION }} lld-${{ env.LLVM_VERSION }} llvm-${{ env.LLVM_VERSION }} libllvm${{ env.LLVM_VERSION }} llvm-${{ env.LLVM_VERSION }}-runtime libclang-common-${{ env.LLVM_VERSION }}-dev libclang-${{ env.LLVM_VERSION }}-dev libclang1-${{ env.LLVM_VERSION }} libclang-rt-${{ env.LLVM_VERSION }}-dev libc++-${{ env.LLVM_VERSION }}-dev libc++abi-${{ env.LLVM_VERSION }}-dev libunwind-${{ env.LLVM_VERSION }}-dev libllvmlibc-${{ env.LLVM_VERSION }}-dev
 
       # Install xmake
       - name: Setup xmake
@@ -77,7 +78,7 @@ jobs:
           key: ${{ matrix.platform.os }}-${{ matrix.platform.arch }}-${{ matrix.mode }}-${{ matrix.platform.runtime }}-${{ matrix.platform.toolchain }}-${{ steps.dep_hash.outputs.hash }}-W${{ steps.cache_key.outputs.key }}
 
       - name: Configure xmake and install dependencies
-        run: xmake config -vD --build_examples=true --toolchain=${{ matrix.platform.toolchain }} --arch=${{ matrix.platform.arch }} --mode=${{ matrix.mode }} --runtimes=${{ matrix.platform.runtime }} --yes --policies=package.precompiled:n
+        run: xmake config -vD --enable_tests=true --toolchain=${{ matrix.platform.toolchain }} --arch=${{ matrix.platform.arch }} --mode=${{ matrix.mode }} --runtimes=${{ matrix.platform.runtime }} --yes --policies=package.precompiled:n
 
       # Save dependencies
       - name: Save cached xmake dependencies
@@ -90,15 +91,16 @@ jobs:
       - name: Build all targets
         run: xmake build -vD -a
 
-      - name: Run tests (in this case the single exe)
-        run: xmake run -vD --group=EXES
-
       - name: Install
         run: xmake install -vDo dest/
-      
+
       - name: Archive production artifacts
         uses: actions/upload-artifact@v4
         with:
           name: ${{ matrix.platform.os }}-${{ matrix.platform.arch }}-${{ matrix.mode }}-${{ matrix.platform.toolchain }}-${{ matrix.platform.runtime }}
           path: |
             dest
+
+      - name: Run tests
+        run: xmake test -v
+
