--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ on:
 
 env:
   VULKAN_VERSION: 1.3.261.1
-  LLVM_VERSION: 18
+  LLVM_VERSION: 19
 
 jobs:
   build:
@@ -19,9 +19,8 @@ jobs:
         platform:
           - { runner: windows-latest, os: windows, arch: x64,    toolchain: msvc,     runtime: MT }
           - { runner: windows-latest, os: windows, arch: x64,    toolchain: clang-cl, runtime: c++_static }
-          - { runner: ubuntu-22.04,   os: linux,   arch: x86_64, toolchain: clang-18, runtime: c++_static }
-          - { runner: ubuntu-22.04,   os: linux,   arch: x86_64, toolchain: gcc,      runtime: stdc++_static }
-          - { runner: ubuntu-22.04,   os: linux,   arch: x86_64, toolchain: gcc,      runtime: stdc++_shared }
+          - { runner: ubuntu-latest,  os: linux,   arch: x86_64, toolchain: clang-19, runtime: c++_static }
+          - { runner: ubuntu-latest,  os: linux,   arch: x86_64, toolchain: gcc-14,   runtime: stdc++_static }
         mode: [ debug, release ]
 
     runs-on: ${{ matrix.platform.runner }}
@@ -49,10 +48,10 @@ jobs:
         if: ${{ matrix.platform.os == 'linux' }}
         run: |
           wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
-          sudo add-apt-repository -y "deb http://apt.llvm.org/jammy/ llvm-toolchain-jammy-18 main"
-          sudo add-apt-repository -y "deb-src http://apt.llvm.org/jammy/ llvm-toolchain-jammy-18 main"
-          sudo apt-get update -y
-          sudo apt-get install -y clang-${{ env.LLVM_VERSION }} lld-${{ env.LLVM_VERSION }} llvm-${{ env.LLVM_VERSION }} libllvm${{ env.LLVM_VERSION }} llvm-${{ env.LLVM_VERSION }}-runtime libclang-common-${{ env.LLVM_VERSION }}-dev libclang-${{ env.LLVM_VERSION }}-dev libclang1-${{ env.LLVM_VERSION }} libclang-rt-${{ env.LLVM_VERSION }}-dev libc++-${{ env.LLVM_VERSION }}-dev libc++abi-${{ env.LLVM_VERSION }}-dev libunwind-${{ env.LLVM_VERSION }}-dev libllvmlibc-${{ env.LLVM_VERSION }}-dev
+          sudo add-apt-repository -y "deb http://apt.llvm.org/noble/ llvm-toolchain-noble-${{ env.LLVM_VERSION }} main"
+          sudo add-apt-repository -y "deb-src http://apt.llvm.org/noble/ llvm-toolchain-noble-${{ env.LLVM_VERSION }} main"
+          sudo apt update -y
+          sudo apt install -y clang-${{ env.LLVM_VERSION }} lld-${{ env.LLVM_VERSION }} llvm-${{ env.LLVM_VERSION }} libllvm${{ env.LLVM_VERSION }} llvm-${{ env.LLVM_VERSION }}-runtime libclang-common-${{ env.LLVM_VERSION }}-dev libclang-${{ env.LLVM_VERSION }}-dev libclang1-${{ env.LLVM_VERSION }} libclang-rt-${{ env.LLVM_VERSION }}-dev libc++-${{ env.LLVM_VERSION }}-dev libc++abi-${{ env.LLVM_VERSION }}-dev libunwind-${{ env.LLVM_VERSION }}-dev libllvmlibc-${{ env.LLVM_VERSION }}-dev
 
       # Install xmake
       - name: Setup xmake
